--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "cron": "^1.0.9",
-    "request": "^2.53.0"
+    "firebase": "^2.2.3",
+    "request": "^2.53.0",
+    "underscore": "^1.8.2"
   }
 }
